# Lipika

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 8d10a079e65c_initial_schema.py
src/: main.py
src/api/: deps.py  router.py
src/api/v1/endpoints/: ai.py  auth.py  health.py  notes.py  ping.py
src/core/: config.py  exceptions.py  lifespan.py  logging_config.py
src/dao/: __init__.py  user.py
src/db/: __init__.py  base.py  session.py
src/db/models/: __init__.py  note.py  session.py  user.py
src/middleware/: logging.py  rate_limit.py
src/schemas/: __init__.py  ai.py  auth.py  note.py
src/services/: ai_client.py  redis_client.py
src/services/auth/: __init__.py  exceptions.py  register.py
src/utils/: api_paths.py  security.py
tests/: test_api_paths.py
